# wxx-tools

./: .gitignore  CMakeLists.txt  CMakePresets.json  wxxTools.rc  xxTools.txt
3rd/: README.md
cmake/: wxxt.cmake  wxxt_asio.cmake  wxxt_fmt.cmake  wxxt_tools_ninja.cmake  wxxt_win32xx.cmake  xxt.cmake  xxt_win32.cmake
src/: application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h
